--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -25,6 +25,7 @@
 		"@nestjs/typeorm": "10.0.2",
 		"class-transformer": "^0.5.1",
 		"class-validator": "0.14.1",
+		"date-fns": "^3.6.0",
 		"graphql": "16.8.2",
 		"nestjs-pino": "^4.1.0",
 		"pg": "8.12.0",
