--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@biomejs/biome": "1.8.1",
     "@iconify/json": "2.2.113",
     "@types/fs-extra": "11.0.1",
+    "@types/node": "^20.3.1",
     "esno": "0.17.0",
     "fs-extra": "11.1.1",
     "lorem-ipsum": "^2.0.8",
